--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,12 @@
 version: '3.7'
 
 services:
-#   datavi-database:
-#     image: postgres:latest
-#     container_name: datavi_db
-#     restart: on-failure
-# #    expose:
-# #      - "5432"
-#     ports:
-#       - "8632:5432"
-#     environment:
-#       POSTGRES_USER: "longkong"
-#       POSTGRES_PASSWORD: "longkong"
-#       POSTGRES_DATABASE: "datavi-service"
-#     volumes:
-#       - //root/adaptric-storage/postgres-card-data:/var/lib/postgresql/data
-#     networks:
-#       - datavi-database
-
   datavi-service-api:
     build: .
     image: cpf/datavi-api:0.0.1
     container_name: cpf-datavi-api
-    # network_mode: "host"
-    command: "./stakeholder-api"
+    network_mode: "host"
+    # command: "./stakeholder-api"
     restart: on-failure
     # expose:
     #  - "5000"
@@ -34,7 +17,5 @@ services:
       - datavi-api-network
 
 networks:
-  # datavi-database:
-  #   name: datavi-database
-  datavi-service-api:
+  datavi-api-network:
     name: datavi-api-network
