--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
   datavi-service-api: # Service name
     build: .
     image: datavi-api:0.0.1
-    environment:
-      - ENV_TYPE=${ENV_TYPE}
-      - DB_HOST=${DB_HOST}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_DATABASE=${DB_DATABASE}
+    # environment:
+    #   - ENV_TYPE=${ENV_TYPE}
+    #   - DB_HOST=${DB_HOST}
+    #   - DB_USERNAME=${DB_USERNAME}
+    #   - DB_PASSWORD=${DB_PASSWORD}
+    #   - DB_DATABASE=${DB_DATABASE}
     env_file:
-      - /.env
+      - /app.env
     container_name: cpf-datavi-api
     network_mode: "host"
     command: "go run ."
@@ -19,8 +19,9 @@ services:
     # expose:
     #  - "5000"
 
+# inside port network use 5432, outside use port 8109
     ports:
-      - "8109:8109"
+      - "8109:5432"
     networks:
       - datavi-api-network
 
