run hot fix database incorrect solution

--- a/app.env
+++ b/app.env
@@ -1,8 +1,8 @@
-ENV_TYPE="local"
-DB_HOST="127.0.0.1:5432"
-DB_USERNAME="postgres"
-DB_PASSWORD="postgres"
-DB_DATABASE="myTest-datavi"
+ENV_TYPE="dev"
+DB_HOST="dev-datavi.cxwpcvm3mzsu.ap-southeast-1.rds.amazonaws.com:5432"
+DB_USERNAME="devdatavi"
+DB_PASSWORD="6z11KkLWZBVdGUM1Bnyh"
+DB_DATABASE="postgres"
 DB_PORT=5432
 
 PORT=8080
