--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   datavi-service-api: # Service name
     build: .
     image: datavi-api:0.0.1
-    # environment:
-    #   - ENV_TYPE=${ENV_TYPE}
-    #   - DB_HOST=${DB_HOST}
-    #   - DB_USERNAME=${DB_USERNAME}
-    #   - DB_PASSWORD=${DB_PASSWORD}
-    #   - DB_DATABASE=${DB_DATABASE}
+    environment:
+      - ENV_TYPE=${ENV_TYPE}
+      - DB_HOST=${DB_HOST}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_DATABASE=${DB_DATABASE}
     env_file:
       - /app.env
     container_name: cpf-datavi-api
